<resources>
    <string name="app_name">MovieTicketsApp</string>
    <string name="title_accept_ticket_screen">Accept Ticket Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title: </string>
    <string name="genre">Genre: </string>
    <string name="release_year">Release Year: </string>
    <string name="ratings">Ratings: </string>
    <string name="no_data_to_view">No data to view</string>
    <string name="show_details">Show Details</string>
    <string name="movie_details">Movie Details</string>
    <string name="please_check_internet_connection">Please check your internet connection.</string>
</resources>
