<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="10dp"
            tools:context=".fragments.DetailFragment">

            <TextView
                android:id="@+id/txt_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_data_to_view"
                android:textColor="@color/colorSilver"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_movie"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="4dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_ratings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/ratings"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_release_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/release_year"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>