<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".fragments.DetailFragment">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@drawable/tab_bg"
            android:padding="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/movie_details"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_to_view"
            android:textColor="@color/colorSilver"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/my_toolbar"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_movie"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_movie"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/title"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_ratings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/ratings"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_release_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/release_year"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textSize="14sp" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</layout>